# tuv-x

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  Dockerfile  Dockerfile.docs  Dockerfile.memcheck  Dockerfile.mpi  Dockerfile.mpi.memcheck  Makefile  Makefile.sav  README.md  VERSION_NOTES.txt  delta_eddington.f90  error.json  grids.f  la_srb.f  odrl.f  psndo.f  rtlink.f  rxn.f  savout.f  setcld.f  setno2.f  spectral_wght.config.json  swphys.f  vpair.f  zeroal.f
packaging/: CMakeLists.txt
src/: CMakeLists.txt  abs_linalgebra.F90  constants.F90  core.F90  cross_section.F90  cross_section_factory.F90  cross_section_warehouse.F90  delta_eddington.F90  diagnostic_util.F90  diagout.F90  diagout.f90  diagout.f90.sav  disord.f90  dose_rates.F90  environment.F90  grid.F90  grid_factory.F90  grid_warehouse.F90  grids.f  interpolate.F90  la_sr_bands.F90  la_srb.f  la_srb.type.F90  linalgebra.F90  linear_algebra.F90  linear_algebra_linpack.F90  netcdf.F90  netcdf_util.F90  output.F90  photo_kinetics.F90  photo_utils.F90  photolysis.F90  photolysis_component.F90  photolysis_component_factory.F90  photolysis_core.F90  photolysis_rate.F90  photolysis_rates.F90  photorates_component_core.F90  profile.F90  profile_factory.F90  (+35 more)
src/Profile/: CMakeLists.txt  Profile_factory.F90  o3.from_csv_file.type.F90
src/cross_section/: CMakeLists.txt  ch2o.cross_section.type.F90  ch3ono2-ch3o_no2.cross_section.type.F90  hcfc.cross_section.type.F90  nitroxy_ethanol.cross_section.type.F90  t_butyl_nitrate.cross_section.type.F90  tint.cross_section.type.F90
src/cross_sections/: CMakeLists.txt  acetone-ch3co_ch3.F90  base.F90  bro-br_o.F90  ccl4.F90  cfc-11.F90  ch2o.F90  ch3ono2-ch3o_no2.F90  chbr3.F90  chcl3.F90  cl2-cl_cl.F90  clono2.F90  h2o2-oh_oh.F90  hcfc.F90  hno3-oh_no2.F90  hobr-oh_br.F90  n2o-n2_o1d.F90  n2o5-no2_no3.F90  nitroxy_acetone.F90  nitroxy_ethanol.F90  no2_tint.F90  o2.F90  o3_jpl06.F90  o3_tint.F90  oclo.F90  rayliegh.F90  rono2.F90  t_butyl_nitrate.F90  temperature_based.F90  tint.F90
src/grid/: from_config.type.F90
src/grids/: CMakeLists.txt  equal_delta.F90  from_config.F90  from_csv_file.F90  from_host.F90
src/linear_algebras/: CMakeLists.txt  linpack.F90
src/profiles/: CMakeLists.txt  Profile_factory.F90  Profile_warehouse.F90  abstract.Profile.type.F90  air.F90  earth_sun_distance.F90  etfl.from_csv_file.type.F90  extraterrestrial_flux.F90  from_config.F90  from_config.type.F90  from_csv_file.F90  from_csv_file.type.F90  from_host.F90  o2.F90  o3.F90  profile_utils.F90  solar_zenith_angle.F90  srfAlbedo_from_config.type.F90  surface_albedo.F90  sza_from_time.type.F90
src/quantum_yield/: .abstract.quantum_yield.type.F90.swp  CMakeLists.txt  abstract.quantum_yield.type.F90  acetone-ch3co_ch3.quantum_yield.type.F90  base.quantum_yield.type.F90  c2h5cho.quantum_yield.type.F90  ch2chcho.quantum_yield.type.F90  ch2o.quantum_yield.type.F90  ch3cho-ch3_hco.quantum_yield.type.F90  ch3coch2ch3-ch3co_ch2ch3.quantum_yield.type.F90  ch3cocho.quantum_yield.type.F90  clo-cl_o1d.quantum_yield.type.F90  clo-cl_o3p.quantum_yield.type.F90  clono2-cl_no3.quantum_yield.type.F90  clono2-clo_no2.quantum_yield.type.F90  ho2-oh_o.quantum_yield.type.F90  mvk.quantum_yield.type.F90  no2.tint.quantum_yield.type.F90  no3-_aq.quantum_yield.type.F90  o3-o2_o1d.quantum_yield.type.F90  o3-o2_o3p.quantum_yield.type.F90  quantum_yield_factory.F90  tint.quantum_yield.type.F90
src/quantum_yields/: CMakeLists.txt  acetone-ch3co_ch3.F90  base.F90  c2h5cho.F90  ch2chcho.F90  ch2o.F90  ch3cho-ch3_hco.F90  ch3coch2ch3-ch3co_ch2ch3.F90  ch3cocho.F90  clo-cl_o1d.F90  clo-cl_o3p.F90  clono2-cl_no3.F90  clono2-clo_no2.F90  ho2-oh_o.F90  ho2.F90  mvk.F90  no2_tint.F90  no3_aq.F90  o3-o2_o1d.F90  o3-o2_o3p.F90  tint.F90
src/radXfer_cross_section/: CMakeLists.txt  abstract.cross_section.type.F90  abstract.radXfer.cross_section.type.F90  acetone-ch3co_ch3.cross_section.type.F90  base.cross_section.type.F90  bro-br_o.cross_section.type.F90  ccl4.cross_section.type.F90  cfc-11.cross_section.type.F90  ch2o.cross_section.type.F90  ch3ono2-ch3o_no2.cross_section.type.F90  chbr3.cross_section.type.F90  chcl3.cross_section.type.F90  cl2-cl_cl.cross_section.type.F90  clono2.cross_section.type.F90  h2o2-oh_oh.cross_section.type.F90  hcfc.cross_section.type.F90  hno3-oh_no2.cross_section.type.F90  hobr-oh_br.cross_section.type.F90  n2o-n2_o1d.cross_section.type.F90  n2o5-no2_no3.cross_section.type.F90  nitroxy_acetone.cross_section.type.F90  nitroxy_ethanol.cross_section.type.F90  no2.tint.cross_section.type.F90  o2.cross_section.type.F90  o3.tint.cross_section.type.F90  oclo.cross_section.type.F90  radXfer_xsect_factory.F90  radXfer_xsect_warehouse.F90  rayliegh.cross_section.type.F90  rono2.cross_section.type.F90  t_butyl_nitrate.cross_section.type.F90  tint.cross_section.type.F90
src/radiative_transfer/: CMakeLists.txt  radiative_transfer.F90  radiator.F90  radiator_factory.F90  radiator_warehouse.F90  solver.F90  solver_factory.F90
src/radiator/: CMakeLists.txt  aerosol_radiator.F90  base.radiator.type.F90  radiator.F90  radiator_factory.F90  radiator_warehouse.F90
src/radiators/: CMakeLists.txt  aerosol.F90  base.F90
src/spectral_weights/: CMakeLists.txt  UV_Index.F90  eppley.F90  exp_decay.F90  gaussian.F90  gaussian_filter.F90  notch_filter.F90  par.F90  phytoplankton_boucher.F90  plant_damage.F90  plant_damage_flint_caldwell.F90  plant_damage_flint_caldwell_ext.F90  scup_mice.F90  standard_human_erythema.F90
src/spectral_wght/: CMakeLists.txt  plant_damage_flint_caldwell_ext.spectral_wght.type.F90
src/spectral_wghts/: CMakeLists.txt  UV_Index.F90  eppley.F90  exp_decay.F90  gaussian_filter.F90  notch_filter.F90  par.F90  phytoplankton_boucher.F90  plant_damage.F90  plant_damage_flint_caldwell.F90  plant_damage_flint_caldwell_ext.F90  scup_mice.F90  standard_human_erythema.F90
src/util/: la_srb.type.F90
src/vert_Profile/: air.from_csv_file.type.F90  o3.from_csv_file.type.F90  vert_Profile_warehouse.F90
test/: CMakeLists.txt  valgrind.supp
test/Profiles/: test.F90
test/oldtuv/: rxn.f  (+22 more)
(+467 files in other folders)
